--- a/index.html
+++ b/index.html
@@ -2,29 +2,10 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lovexym</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <meta http-equiv="refresh" content="0;url=https://mall.jd.com/index-12596423.html">
+    <title>正在跳转...</title>
 </head>
 <body>
-    <header>
-        <h1>欢迎来到我爱许艺萌网站！</h1>
-    </header>
-    
-    <section>
-        <h2>选择一个人物</h2>
-        <button id="character1" class="character-btn">角色1</button>
-        <button id="character2" class="character-btn">角色2</button>
-    </section>
-    
-    <section id="dialogueSection" style="display:none;">
-        <h3>对话：</h3>
-        <p id="dialogueText"></p>
-        <button id="speakBtn">让角色说话</button>
-    </section>
-
-    <div id="3d-container"></div>
-
-    <script src="/js/main.js"></script>
+    如果没有跳转，请点击 <a href="https://mall.jd.com/index-12596423.html">这里</a>。
 </body>
 </html>
